--- a/src/features/catalog/components/ActivitiesSection/ActivitiesSection.module.scss
+++ b/src/features/catalog/components/ActivitiesSection/ActivitiesSection.module.scss
@@ -1,25 +1,25 @@
 @import 'src/scss/device';
 
 .activitiesSection {
-  margin-top: 6vw;
+  margin-top: 5.4vw;
   position: relative;
   background-image: url('./assets/background1920.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: bottom;
+  background-position: center 0;
   background-attachment: scroll;
   box-sizing: border-box;
-  height: 40vw;
+  height: 35vw;
   // min-height: 44.2vw;
 
   .card {
     max-width: 26vw;
     margin-top: 4.68rem;
 
-    @include device((max: 1152px)) {
-      margin-top: 3rem;
-      max-width: 30vw;
-    }
+    // @include device((max: 1152px)) {
+    //   margin-top: 3rem;
+    //   max-width: 30vw;
+    // }
 
     @include device-ipad {
       display: none;
@@ -27,7 +27,7 @@
   }
 
   .mask {
-    mask-position: 50% calc(50% + 22vw);
+    mask-position: 50% 25.6vw;
   }
 
   &:after {
