--- a/src/root.scss
+++ b/src/root.scss
@@ -99,7 +99,7 @@ html {
     font-size: 1.09vw; // 14 px / 1280
   }
 
-  @include device((min: 768px, max: 1024px)) {
+  @include device((min: 768px, max: 1023px)) {
     font-size: 1.26vw; // 13 px / 1024
   }
 
@@ -115,6 +115,7 @@ body {
   letter-spacing: normal;
   overflow-x: hidden;
   color: #202020;
+  background-color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6, p, ol, ul, input {
